[package]
name = "find-past-paper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }